--- a/src/renderer/components/Containers/Containers.css
+++ b/src/renderer/components/Containers/Containers.css
@@ -2,28 +2,37 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  background-color: var(--pallete-white);
-  border-radius: 7px;
-  padding: 40px;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .mainContainer {
-  padding: 5px 35px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  align-items: center;
+  padding: 15px;
   overflow-x: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 .centerContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
   width: 100%;
-  max-width: 1460px;
+  max-width: 1480px;
+}
+
+.cardBody {
+  position: relative;
+  padding: 11px 15px 18px 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .cardContainer {
-  border: 1px solid black;
-  box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.386);
-  border-radius: 23px;
-  background-color: white;
+  outline: 1.7px solid black;
+  outline-offset: -1.7px;
+  border-radius: 9px;
+  background-color: var(--pallete-peach-yellow);
 }
