--- a/src/renderer/components/Texts/Texts.css
+++ b/src/renderer/components/Texts/Texts.css
@@ -1,18 +1,19 @@
 .bodyTitle {
-  font-size: 1.6em;
-  font-family: 'Segoe UI';
-  text-transform: uppercase;
+  font-size: 20px;
+  font-family: 'Miriam Libre';
   margin-top: 0;
-  color: var(--pallete-text-darkBlue);
+  color: white;
 }
 
 .cardTitle {
-  background-color: var(--pallete-indigo);
-  color: var(--pallete-white);
-  padding: 15px 15px 7px 15px;
-  border-radius: 20px 20px 0 0;
-  font-weight: 600;
-  font-family: 'Inter';
+  background-color: var(--pallete-brown-sugar);
+  color: black;
+  border: 1.7px solid black;
+  padding: 5px 0;
+  text-align: center;
+  border-radius: 9px 9px 0 0;
+  font-weight: bold;
+  font-family: 'Miriam Libre';
   margin: 0;
-  font-size: 1.1em;
+  font-size: 13px;
 }
