--- a/src/renderer/components/Button/Button.css
+++ b/src/renderer/components/Button/Button.css
@@ -1,19 +1,18 @@
 .button-classic {
-  background-color: var(--pallete-orange);
+  background-color: var(--pallete-cosmic-latte);
   border: 1px solid black;
-  border-radius: 7px;
-  box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.386);
-  color: var(--pallete-white);
-  padding: 10px 20px;
-  width: 250px;
+  border-radius: 20px;
+  box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.769);
+  color: black;
+  padding: 5px 10px;
+  min-width: 200px;
   font-family: 'Inter';
-  text-transform: uppercase;
-  font-weight: 600;
+  font-weight: bold;
   cursor: pointer;
 }
 
 .button-classic:hover {
-  background-color: var(--pallete-lighter-orange);
+  background-color: var(--pallete-peach-yellow);
 }
 
 .button-information {
