--- a/src/renderer/components/Containers/Containers.css
+++ b/src/renderer/components/Containers/Containers.css
@@ -36,3 +36,53 @@
   border-radius: 9px;
   background-color: var(--pallete-peach-yellow);
 }
+
+.whiteContainer {
+  background-color: white;
+  border-radius: 3px;
+  outline: 1.7px solid black;
+  outline-offset: -1.7px;
+  padding: 15px;
+  display: flex;
+  gap: 10px;
+  width: 71vw; /* or a fixed width like 800px */
+  overflow-x: auto; /* make sure it's not hiding overflow */
+}
+
+.algorithmInterfaceComponent {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.stateContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  font-size: 0.8rem;
+  font-family: 'Inter';
+}
+
+.pageNumberContainer {
+  text-align: center;
+}
+
+.tableContainer {
+  outline: 1.7px solid black;
+  outline-offset: -1.7px;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.tableContainer tbody tr td {
+  min-width: 25px;
+  height: 30px;
+  text-align: center;
+  background-color: var(--pallete-cosmic-latte);
+  outline: 1.7px solid black;
+}
+
+.statesWrapper {
+  display: flex;
+  gap: 0.3rem;
+}
